--- a/src/Aiursoft.ChessServer/Views/Challenges/Create.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Challenges/Create.cshtml
@@ -15,7 +15,7 @@
         <div class="card mb-2 col-sm-12 px-1">
             <div class="card-body">
                 <h5 class="card-title">Create a new room</h5>
-                <form asp-controller="Home" asp-action="Create" method="post" asp-antiforgery="false">
+                <form asp-controller="Challenges" asp-action="Create" method="post" asp-antiforgery="false">
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <input type="hidden" asp-for="CreatorId"/>
                     <div class="form-group">
