feat: disable overscroll-behavior

--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE HTML>
-<html lang="en" class="h-100">
+<html lang="en" class="h-100" style="overscroll-behavior: none;">
 
 <head>
     <meta charset="utf-8"/>
