--- a/src/Aiursoft.ChessServer/Views/Games/GetHtml.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Games/GetHtml.cshtml
@@ -12,6 +12,7 @@
             </div>
             <div class="col-md-6">
                 @* Chat *@
+                <vc:chat></vc:chat>
             </div>
         </div>
     </main>
