Update Send button styling in chat component
A change has been made to the styling of the "Send" button in the chat component to include rounded corners. The update provides a softer aesthetic to the button, improving the visual appearance and user experience.

--- a/src/Aiursoft.ChessServer/Views/Shared/Components/Chat/Default.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/Components/Chat/Default.cshtml
@@ -7,7 +7,7 @@
 
     <form class="input-group input-group-sm my-2" id="chatSendForm">
         <input type="text" class="form-control" id="inputMessage" placeholder="type message, enter to send" />
-        <button class="btn btn-primary btn-sm" type="submit">Send</button>
+        <button class="btn btn-primary btn-sm" type="submit" style="border-radius: 0 10px 10px 0;">Send</button>
     </form>
 
     <script type="module">
