Add icons to navbar links and player name
Added two font awesome icons to the navbar links 'Rooms' and 'Watch'. Icon for player name also added in the layout.js file. This gives a more visual and interactive touch to the action links and personalizes the player name link.

--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -29,16 +29,24 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">Rooms</a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">
+                            <i class="fa-solid fa-chess-rook"></i>
+                            Rooms
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Watch">Watch</a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Watch">
+                            <i class="fa-solid fa-satellite"></i>
+                            Watch
+                        </a>
                     </li>
                 </ul>
                 <div class="form-inline">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" title="Manage" id="player-nick-name" href="#">Player name</a>
+                            <a class="nav-link" title="Manage" href="#" id="player-nick-name">
+                                Player name
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
