Integrate AI chess engine and player vs AI functionality
Added new ChessEngine service as a singleton and integrated "LynxChess.Lynx" package. A new "Against AI" button is included in the layout. Player's ID is now appened to the "Against AI" button link. Created a new controllers, PveController, to handle interactions in Player versus AI mode.

--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -40,6 +40,12 @@
                             Watch
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Pve" asp-action="New" id="against-ai-link">
+                            <i class="fa-solid fa-chalkboard-user"></i>
+                            Against AI
+                        </a>
+                    </li>
                 </ul>
                 <div class="form-inline">
                     <ul class="navbar-nav mr-auto">
