Update script reference in _Layout.cshtml
The script reference to layout.js in the _Layout.cshtml file was updated by adding an "asp-append-version" attribute. This will ensure a fresh copy of the script is loaded by appending a version query parameter to the URL, useful for cache busting.

--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
 <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 <script src="~/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.js"></script>
-<script type="module" src="~/scripts/layout.js"></script>
+<script type="module" src="~/scripts/layout.js" asp-append-version="true"></script>
 @(await RenderSectionAsync("scripts", false))
 </body>
 
