Patch gitlab.aiursoft.cn to gitlab.aiursoft.com.

--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
+                            <a class="nav-link" href="https://gitlab.aiursoft.com/aiursoft/chessserver">
                                 <i class="fab fa-gitlab"></i>
                                 Source Code
                             </a>
@@ -99,7 +99,7 @@
     <div class="container">
         &copy; @DateTime.UtcNow.Year - Aiursoft.ChessServer -
         <a
-            href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
+            href="https://gitlab.aiursoft.com/aiursoft/chessserver">
             GitLab
         </a>
     </div>
